--- a/index.html
+++ b/index.html
@@ -39,13 +39,24 @@
     <div class="page-wrapper">
       <!-- Header -->
       <header>
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center header-inner">
+          <!-- logo -->
           <img
             src="logo.png"
             alt="Shinga logo"
             height="50"
             class="rounded-circle"
           />
+
+          <!-- LinkedIn icon -->
+          <a
+            href="https://linkedin.com/in/yourprofile"
+            target="_blank"
+            class="header-icon"
+            aria-label="LinkedIn"
+          >
+            <i class="bi bi-linkedin"></i>
+          </a>
         </div>
       </header>
 
