--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <!-- LinkedIn icon -->
           <a
-            href="https://linkedin.com/in/yourprofile"
+            href="https://www.linkedin.com/in/shinga"
             target="_blank"
             class="header-icon"
             aria-label="LinkedIn"
@@ -72,7 +72,11 @@
             Eager to drive innovation within a forward-thinking company<br />
             and enhance their creative vision.
           </p>
-          <a href="#" class="btn btn-outline-primary btn-modern">LinkedIn</a>
+          <a
+            href="https://www.linkedin.com/in/shinga"
+            class="btn btn-outline-primary btn-modern"
+            >LinkedIn</a
+          >
         </div>
       </section>
 
@@ -127,7 +131,7 @@
         </div>
 
         <a
-          href="https://linkedin.com/in/yourprofile"
+          href="https://www.linkedin.com/in/shinga"
           target="_blank"
           class="footer-icon"
           aria-label="LinkedIn"
