added pawfect project

--- a/index.html
+++ b/index.html
@@ -40,13 +40,19 @@
       <!-- Header -->
       <header>
         <div class="d-flex align-items-center header-inner">
-          <!-- logo -->
-          <img
-            src="logo.png"
-            alt="Shinga logo"
-            height="50"
-            class="rounded-circle"
-          />
+          <a
+            href="index.html"
+            class="footer-logo-link"
+            aria-label="Back to home"
+          >
+            <!-- logo -->
+            <img
+              src="logo.png"
+              alt="Shinga logo"
+              height="50"
+              class="rounded-circle"
+            />
+          </a>
 
           <!-- LinkedIn icon -->
           <a
@@ -109,25 +115,34 @@
         <h1>PROJECTS</h1>
         <div class="project-row">
           <div class="project-card">
-            <img src="Mockup 1.png" alt="Project 1 screenshot" />
-            <div class="project-title">Pawfect</div>
+            <a href="pawfect.html" class="project-link">
+              <img src="Mockup 1.png" alt="Project 1 screenshot" />
+              <div class="project-title">Pawfect</div>
+            </a>
           </div>
           <div class="project-card">
-            <img src="Mockup 1.png" alt="Project 2 screenshot" />
-            <div class="project-title">Project 2</div>
+            <a href="splashes.html" class="project-link">
+              <img src="Mockup 1.png" alt="Project 2 screenshot" />
+              <div class="project-title">Project 2</div>
+            </a>
           </div>
         </div>
       </section>
     </div>
-    <!-- /.page-wrapper -->
 
     <!-- FOOTER (now full-width) -->
     <footer class="site-footer">
       <div class="footer-inner">
         <div class="footer-brand">
-          <div class="footer-avatar">
-            <img src="avatar-white.png" alt="Shinga avatar" />
-          </div>
+          <a
+            href="index.html"
+            class="footer-logo-link"
+            aria-label="Back to home"
+          >
+            <div class="footer-avatar">
+              <img src="avatar-white.png" alt="Shinga avatar" />
+            </div>
+          </a>
         </div>
 
         <a
