changed the title format of projects and added basic structure of splashes

--- a/pawfect.html
+++ b/pawfect.html
@@ -67,7 +67,7 @@
             <!-- About Splashes -->
             <div class="col-12 col-md-6">
               <h2>About Pawfect</h2>
-              <p>
+              <p class="project-text">
                 Pawfect Dog Adoption is dedicated to bringing joy and
                 companionship into homes by matching loving families with their
                 ideal canine companions. Founded on the belief that every dog
@@ -81,7 +81,7 @@
             <!-- Tools -->
             <div class="col-12 col-md-6">
               <h2>Tools</h2>
-              <ul>
+              <ul class="project-text">
                 <li>
                   Frontend: React with React Router, React-Bootstrap, and axios
                 </li>
