--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
           </div>
           <div class="project-card">
             <a href="splashes.html" class="project-link">
-              <img src="Mockup 1.png" alt="Project 2 screenshot" />
-              <div class="project-title">Project 2</div>
+              <img src="Mockup 2.png" alt="Project 2 screenshot" />
+              <div class="project-title">Splashes</div>
             </a>
           </div>
         </div>
