added splashes and fixed footer

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
         <div class="project-row">
           <div class="project-card">
             <a href="pawfect.html" class="project-link">
-              <img src="Mockup 1.png" alt="Project 1 screenshot" />
+              <img src="Mockup 1.png" alt="Pawfect" />
               <div class="project-title">Pawfect</div>
             </a>
           </div>
           <div class="project-card">
             <a href="splashes.html" class="project-link">
-              <img src="Mockup 2.png" alt="Project 2 screenshot" />
+              <img src="Mockup 2.png" alt="Splashes" />
               <div class="project-title">Splashes</div>
             </a>
           </div>
@@ -130,7 +130,6 @@
       </section>
     </div>
 
-    <!-- FOOTER (now full-width) -->
     <footer class="site-footer">
       <div class="footer-inner">
         <div class="footer-brand">
@@ -144,6 +143,8 @@
             </div>
           </a>
         </div>
+
+        <div class="footer-copy">© 2025 SHINGA</div>
 
         <a
           href="https://www.linkedin.com/in/shinga"
