--- a/splashes.html
+++ b/splashes.html
@@ -53,8 +53,8 @@
       <section class="pawfect-hero">
         <div class="pawfect-hero__content text-center">
           <img
-            src="Mockup 1.png"
-            alt="Find Your Pawfect Dog"
+            src="Mockup 2.png"
+            alt="Dive Into Confidence"
             class="pawfect-hero__img img-fluid w-100"
           />
         </div>
@@ -66,15 +66,14 @@
           <div class="row gx-5">
             <!-- About Splashes -->
             <div class="col-12 col-md-6">
-              <h2>About Pawfect</h2>
+              <h2>About Splashes</h2>
               <p class="project-text">
-                Pawfect Dog Adoption is dedicated to bringing joy and
-                companionship into homes by matching loving families with their
-                ideal canine companions. Founded on the belief that every dog
-                deserves a safe, caring environment, Pawfect partners with local
-                shelters and foster networks to ensure each dog receives the
-                medical care, training, and socialization they need before
-                joining a new family.
+                Splashes is a project developed by a team of three to make
+                children's swimming education more fun, safe, and effective.
+                Designed for kids of all ages, Splashes helps young swimmers
+                build confidence in the water while developing lifelong skills.
+                With expert instructors and a supportive environment, every
+                splash brings new progress and joyful memories.
               </p>
             </div>
 
@@ -83,11 +82,8 @@
               <h2>Tools</h2>
               <ul class="project-text">
                 <li>
-                  Frontend: React with React Router, React-Bootstrap, and axios
-                </li>
-                <li>Auth: Facebook OAuth via react-facebook-login</li>
-                <li>
-                  Backend: Node.js + Express with MongoDB (Mongoose), etc.
+                  Frontend: HTML, CSS, React with React Router, React-Bootstrap,
+                  etc.
                 </li>
               </ul>
             </div>
@@ -96,32 +92,19 @@
           <!-- Image gallery row -->
           <div class="row gy-4 mt-5">
             <div class="col-12">
-              <img
-                src="paw1.jpg"
-                alt="Paw 1"
-                class="img-fluid rounded shadow"
-              />
+              <img src="sp1.jpg" alt="Paw 1" class="img-fluid rounded shadow" />
             </div>
             <div class="col-12">
-              <img
-                src="paw2.jpg"
-                alt="Paw 2"
-                class="img-fluid rounded shadow"
-              />
+              <img src="sp2.jpg" alt="Paw 2" class="img-fluid rounded shadow" />
             </div>
             <div class="col-12">
-              <img
-                src="paw3.jpg"
-                alt="Paw 3"
-                class="img-fluid rounded shadow"
-              />
+              <img src="sp3.jpg" alt="Paw 3" class="img-fluid rounded shadow" />
             </div>
             <div class="col-12">
-              <img
-                src="paw4.jpg"
-                alt="Paw 4"
-                class="img-fluid rounded shadow"
-              />
+              <img src="sp4.jpg" alt="Paw 4" class="img-fluid rounded shadow" />
+            </div>
+            <div class="col-12">
+              <img src="sp5.jpg" alt="Paw 4" class="img-fluid rounded shadow" />
             </div>
           </div>
         </div>
