added animation on hero heading

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         </div>
       </header>
 
-      <!-- Hero (full viewport height, centered) -->
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">
-            Hello, I’m 真我 (Shinga).<br />
-            I am an aspiring UX/UI designer<br />
-            with coding knowledge.
+            <span class="line">Hello, I’m 真我 (Shinga).</span>
+            <span class="line">I am an aspiring UX/UI designer</span>
+            <span class="line">with coding knowledge.</span>
           </h1>
+
           <p class="hero-tagline">
             Eager to drive innovation within a forward-thinking company<br />
             and enhance their creative vision.
