--- a/pawfect.html
+++ b/pawfect.html
@@ -130,14 +130,22 @@
       <p></p>
     </div>
 
-    <!-- Footer -->
     <footer class="site-footer">
       <div class="footer-inner">
         <div class="footer-brand">
-          <div class="footer-avatar">
-            <img src="avatar-white.png" alt="Shinga avatar" />
-          </div>
+          <a
+            href="index.html"
+            class="footer-logo-link"
+            aria-label="Back to home"
+          >
+            <div class="footer-avatar">
+              <img src="avatar-white.png" alt="Shinga avatar" />
+            </div>
+          </a>
         </div>
+
+        <div class="footer-copy">© 2025 SHINGA</div>
+
         <a
           href="https://www.linkedin.com/in/shinga"
           target="_blank"
