--- a/pawfect.html
+++ b/pawfect.html
@@ -97,28 +97,28 @@
           <div class="row gy-4 mt-5">
             <div class="col-12">
               <img
-                src="paw1.jpg"
+                src="Paw1.jpg"
                 alt="Paw 1"
                 class="img-fluid rounded shadow"
               />
             </div>
             <div class="col-12">
               <img
-                src="paw2.jpg"
+                src="Paw2.jpg"
                 alt="Paw 2"
                 class="img-fluid rounded shadow"
               />
             </div>
             <div class="col-12">
               <img
-                src="paw3.jpg"
+                src="Paw3.jpg"
                 alt="Paw 3"
                 class="img-fluid rounded shadow"
               />
             </div>
             <div class="col-12">
               <img
-                src="paw4.jpg"
+                src="Paw4.jpg"
                 alt="Paw 4"
                 class="img-fluid rounded shadow"
               />
